// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiButtonIcon is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiButtonIcon euiButtonIcon--xSmall testClass1 testClass2 css-l12df3-empty-primary-hoverStyles-EuiButtonIcon"
  data-test-subj="test subject string"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color accent is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--xSmall css-1pk1dsj-empty-accent-hoverStyles-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color danger is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--xSmall css-vjplbo-empty-danger-hoverStyles-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color ghost is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--xSmall css-1riv60-empty-text-hoverStyles-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color primary is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--xSmall css-l12df3-empty-primary-hoverStyles-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color success is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--xSmall css-33qu1v-empty-success-hoverStyles-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color text is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--xSmall css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color warning is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--xSmall css-t4mk3t-empty-warning-hoverStyles-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props display base is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--xSmall css-t06pf1-base-primary-hoverStyles-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props display empty is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--xSmall css-l12df3-empty-primary-hoverStyles-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props display fill is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--xSmall css-1nhcb79-fill-primary-hoverStyles-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props href secures the rel attribute when the target is _blank 1`] = `
<a
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--xSmall css-l12df3-empty-primary-hoverStyles-EuiButtonIcon"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</a>
`;

exports[`EuiButtonIcon props iconType is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--xSmall css-l12df3-empty-primary-hoverStyles-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props isDisabled is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--xSmall css-1pivaxp-empty-disabled-hoverStyles-EuiButtonIcon"
  disabled=""
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props isDisabled or disabled is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--xSmall css-1pivaxp-empty-disabled-hoverStyles-EuiButtonIcon"
  disabled=""
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props isDisabled renders a button even when href is defined 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--xSmall css-1pivaxp-empty-disabled-hoverStyles-EuiButtonIcon"
  disabled=""
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props isLoading is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--xSmall css-1pivaxp-empty-disabled-hoverStyles-EuiButtonIcon"
  disabled=""
  type="button"
>
  <span
    aria-label="Loading"
    class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
    role="progressbar"
  />
</button>
`;

exports[`EuiButtonIcon props isSelected is rendered as false 1`] = `
<button
  aria-label="button"
  aria-pressed="false"
  class="euiButtonIcon euiButtonIcon--xSmall css-l12df3-empty-primary-hoverStyles-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props isSelected is rendered as true 1`] = `
<button
  aria-label="button"
  aria-pressed="true"
  class="euiButtonIcon euiButtonIcon--xSmall css-l12df3-empty-primary-hoverStyles-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props size m is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--medium css-l12df3-empty-primary-hoverStyles-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props size s is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--small css-l12df3-empty-primary-hoverStyles-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props size xs is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--xSmall css-l12df3-empty-primary-hoverStyles-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;
